<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="GVL_bLongMove_1" Id="{46f384ad-1109-4fa5-8777-9eb96420f7bb}">
    <Declaration><![CDATA[VAR_GLOBAL
// Долгие перемещения
// Прямое движение	
bLongMove1s01_s02_1		:BOOL;
bLongMove1s02_1_s02_2   :BOOL;
bLongMove1s02_2_s03_1   :BOOL;
bLongMove1s02_s03       :BOOL;
bLongMove1s03_1_s03_2   :BOOL;
bLongMove1s03_2_s04_1   :BOOL;
bLongMove1s03_s04       :BOOL;
bLongMove1s04_1_s04_2   :BOOL;
bLongMove1s04_2_s05     :BOOL;
bLongMove1s05_1s06		:BOOL;

bLongMove_1s01_s02_1	 :BOOL;
bLongMove_1s02_1_s02_2   :BOOL;
bLongMove_1s02_2_s03_1   :BOOL;
bLongMove_1s02_s03       :BOOL;
bLongMove_1s03_1_s03_2   :BOOL;
bLongMove_1s03_2_s04_1   :BOOL;
bLongMove_1s03_s04       :BOOL;
bLongMove_1s04_1_s04_2   :BOOL;
bLongMove_1s04_2_s05     :BOOL;
bLongMove_1s05_1s06		:BOOL;  







END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>