<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="GVL_bMove_1" Id="{1084a53e-bc51-407e-87f3-7108524733b1}">
    <Declaration><![CDATA[VAR_GLOBAL
// Прямое движение
bMove1s01_s02_1		:BOOL;
bMove1s02_1_s02_2	:BOOL;

bMove1s02_2_s03_1	:BOOL;
bMove1s02_s03		:BOOL;
bMove1s03_1_s03_2	:BOOL;

bMove1s03_2_s04_1	:BOOL;
bMove1s03_s04		:BOOL;
bMove1s04_1_s04_2	:BOOL;

bMove1s04_2_s05		:BOOL;
bMove1s05_s06		:BOOL;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>