<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="GVL_bSens_1" Id="{add6312c-aa3d-428b-b5e8-66533c5d81fb}">
    <Declaration><![CDATA[VAR_GLOBAL
// --------------------------------------Список датчиков--------------------------------------------//
//---------------------------------------Первый конвейер--------------------------------------------//
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 3 (EPP2339-0021) X1^Channel 1^Input'}
bSens1s01D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 3 (EPP2339-0021) X1^Channel 2^Input'}
bSens1s01D2 AT%I* :BOOL;	// Датчик в конце секции (в обратном направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 3 (EPP2339-0021) X1^Channel 3^Input'}
bSens1s01D3 AT%I* :BOOL;	// Датчик контроля вил 
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 2 (EPP1004-0061) X1^Channel 1^Input'}
bSens1s02D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 2 (EPP1004-0061) X1^Channel 2^Input'}
bSens1s02D2 AT%I* :BOOL;	// Датчик в середине секции 
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 2 (EPP1004-0061) X1^Channel 3^Input'}
bSens1s03D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 2 (EPP1004-0061) X1^Channel 4^Input'}
bSens1s03D2 AT%I* :BOOL;	// Датчик в середине секции 
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 1 (EPP2339-0021) X1^Channel 1^Input'}
bSens1s04D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 1 (EPP2339-0021) X1^Channel 2^Input'}
bSens1s04D2 AT%I* :BOOL;	// Датчик в середине секции 
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 1 (EPP2339-0021) X1^Channel 3^Input'}
bSens1s04D3 AT%I* :BOOL;	// Датчик сканирования RFID
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 1 (EPP2339-0021) X1^Channel 4^Input'}
bSens1s05D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 1 (EPP2339-0021) X1^Channel 5^Input'}
bSens1s05D2 AT%I* :BOOL;	// Датчик управления двойным движением
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 1 (EPP2339-0021) X1^Channel 6^Input'}
bSens1s06D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 1 (EPP2339-0021) X1^Channel 7^Input'}
bSens1s06D2 AT%I* :BOOL;	// Датчик контроля вил

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>