<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="ConvLine1" Id="{1bc0d328-0426-4b0b-b52e-4561038443b9}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM ConvLine1
VAR_INPUT
	bAutomat				:BOOL;
	bManual					:BOOL;
	bStop					:BOOL;
	bReset					:BOOL := FALSE;
	bDirect					:BOOL;
	bReverse				:BOOL;
	bBuffering				:BOOL;
END_VAR
VAR
	fbS1			:FB_ConvPlace;
	fbS2			:FB_ConvPlaceDouble;
	fbS3			:FB_ConvPlaceDouble;
	fbS4			:FB_ConvPlaceDouble;
	fbS5			:FB_ConvPlace;
	fbS6			:FB_ConvPlace;
	bMove1					:BOOL;
	bMove2					:BOOL;
	bDriveMoveS1			:BOOL;
	bDriveMoveS2			:BOOL;
	bEnableMoveToS1			:BOOL :=TRUE;
	bEnableMoveToS2			:BOOL;
	bEnableMoveToS3			:BOOL;
	bEnableMoveToS4			:BOOL;
	bEnableMoveToS5			:BOOL;
	bEnableMoveToS6			:BOOL;
	bEnableRead				:BOOL;
	bEnableWeight			:BOOL;
	fbLoadScan				:FB_LoadScan;
	fbLoadWeight			:FB_LoadWeight;
	bEnableReadyID			:BOOL;
	bEnableReadyData		:BOOL;
	ConvStatusPrev 			:BYTE;
	bSensFreePrevS1 		:BOOL;
	bSensFreePrevS5 		:BOOL;
	bSensFreePrevS6 		:BOOL;

	bCountNoRead_ID1		:WORD;		//Кол-во несчитываний RFID
	bSetVal_ID1				:WORD :=10;	//Заданное значение счетчика (максимально допустимое для несчитываний)
	bResetCTU_ID1			:BOOL;		//Сброс счетчика несчитываний
	
	bCountNoRead_Weight1	:WORD;		//Кол-во несчитываний RFID
	bSetVal_Weight1			:WORD :=10;	//Заданное значение счетчика (максимально допустимое для несчитываний)
	bResetCTU_Weight1		:BOOL;		//Сброс счетчика несчитываний
	
	fbLoadDataToWMS: FB_LoadDataToWMS;
	
	bEnableMove3_2:BOOL;
	bEnableMove3_3:BOOL;
	bEnableMove3_4:BOOL;
	
	fbDelayEnableMove3_2:TON;
	fbDelayEnableMove3_3:TON;
	fbDelayEnableMove3_4:TON;
	
	
	fbFallMove1:F_TRIG;
	fbFallMove2:F_TRIG;
	bLineFree:BOOL;
	fbFreeS6:R_TRIG;
END_VAR
VAR PERSISTENT
	iCounterPallets:INT;
END_VAR


]]></Declaration>
    <Implementation>
      <ST><![CDATA[


fbS1 ( bAutomat:=bAutomat, bManual:=bManual,bStop:=bStop,bReset:=bReset,tBusy:=T#6S, bFirstPlace:=TRUE,
       	bDriveMove:=fbS2.bDrivePrev, bSens1:=bSens1s01D2, bSens2:=bSens1s01D1, bDirect:=bDirect	,bReverse:=bReverse,
       	bSensFork:= bSens1s01D3, bButtConv:= bButt1s01,bButtConvRev:=bButt1s01Rev,
	  	bMove:=bMove1,ConvStatusPrev:=ConvStatusPrev, bEnableMove := bEnableMoveToS1, bSensFreePrev := bSensFreePrevS1);
	  
		bSensFreePrevS1 := fbS1.ConvStatus = 0;
	  	bEnableMoveToS2:= NOT bMove1s02_2_s03_1 AND NOT bMove1s02_s03;
	  
		bLineFree:= fbS3.ConvStatus1=0 AND fbS3.ConvStatus2=0 AND 
      fbS4.ConvStatus1=0 AND fbS4.ConvStatus2=0 AND NOT (bMove1s02_2_s03_1 OR bMove1s02_s03 OR bMove1s03_1_s03_2
      OR bMove1s03_2_s04_1 OR bMove1s03_s04 OR bMove1s04_1_s04_2  OR bMove1s05_s06 OR bMove1s04_2_s05);	 
	  
 IF bLineFree AND fbS6.ConvStatus=0 AND fbS5.ConvStatus=0 THEN
	 iCounterPallets:=0;
 END_IF
	  
		fbFallMove1(CLK:=bMove1s02_2_s03_1);
IF fbFallMove1.Q THEN	
iCounterPallets:=iCounterPallets +1;
END_IF	
	   fbFallMove2(CLK:=bMove1s02_s03);
IF 	fbFallMove2.Q   THEN
	iCounterPallets:=iCounterPallets +2;
END_IF



		fbFreeS6(CLK:=fbS6.ConvStatus=0);
IF fbFreeS6.Q AND iCounterPallets>0 THEN
iCounterPallets:=iCounterPallets -1;	
END_IF

		
		bEnableMove3_2 := (*(fbS6.ConvStatus=0 OR fbS5.ConvStatus=0) AND bLineFree OR *)iCounterPallets<2;
	//  fbDelayEnableMove3_2(IN:=bEnableMove3_2, PT:=T#0.3S);
		
	  
	
	
	  
fbS2 ( bAutomat:=bAutomat, bManual:=bManual,bStop:=bStop,bReset:=bReset, bEnableMove:=bEnableMoveToS2,bBuffering:=bBuffering,
        bDriveMove:=fbS3.bDrivePrev, bSens1:=bSens1s02D2, bSens2:=bSens1s02D1,bSensFork:= bSens1s01D3, ConvStatusPrev1:=0,
        ConvStatusPrev2:=fbS1.ConvStatus, bButtConv:= bButt1s02, bButtConvRev:=bButt1s02Rev, bButtMove:=bButt1s01_s02,
         bDirect:=bDirect	,bReverse:=bReverse,   ConvStatusNext1:= fbS3.ConvStatus1, ConvStatusNext2:= fbS3.ConvStatus2,
		 bEnableMove3:=bEnableMove3_2(*fbDelayEnableMove3_2.Q*), bEnableMove2:= iCounterPallets>1,  //bSensFreePrev2:=fbS1.bSensFree,
	    bMove1:=bMove1s01_s02_1, bMove2:=bMove2, bMove3:=bMove1s02_1_s02_2, 
        bLongMove1=> bLongMove1s01_s02_1,bLongMove3=> bLongMove1s02_1_s02_2  );

	    bEnableMoveToS3:= NOT bMove1s03_2_s04_1 AND NOT bMove1s03_s04 AND NOT bMove1s01_s02_1 AND NOT bMove1s02_1_s02_2;
 
		
		bEnableMove3_3 := (fbS6.ConvStatus=0 OR fbS5.ConvStatus=0) AND fbS4.ConvStatus1=0 AND fbS4.ConvStatus2=0 
       AND NOT (bMove1s03_2_s04_1 OR bMove1s03_s04 OR bMove1s04_1_s04_2 OR bMove1s05_s06 OR bMove1s04_2_s05);
		  fbDelayEnableMove3_3(IN:=bEnableMove3_3, PT:=T#0.3S);
		  
fbS3 ( bAutomat:=bAutomat, bManual:=bManual,bStop:=bStop,bReset:=bReset, bEnableMove:=bEnableMoveToS3,bBuffering:=bBuffering,
        bDriveMove:=fbS4.bDrivePrev, bSens1:=bSens1s03D2, bSens2:=bSens1s03D1,ConvStatusPrev1:=fbS2.ConvStatus1,
        ConvStatusPrev2:=fbS2.ConvStatus2, bButtConv:= bButt1s03, bButtConvRev:=bButt1s03Rev, bButtMove:=bButt1s02_s03, 
		 bDirect:=bDirect	,bReverse:=bReverse,   ConvStatusNext1:= fbS4.ConvStatus1, ConvStatusNext2:= fbS4.ConvStatus2,
		 bEnableMove3:=fbDelayEnableMove3_3.Q,  bEnableMove2:= TRUE,  //bSensFreePrev1:=fbS2.bSensFree1, bSensFreePrev2:=fbS2.bSensFree2,
	    bMove1:=bMove1s02_2_s03_1, bMove2:=bMove1s02_s03, bMove3:=bMove1s03_1_s03_2, 
        bLongMove1=> bLongMove1s02_2_s03_1,bLongMove2=>bLongMove1s02_s03, bLongMove3=> bLongMove1s03_1_s03_2 );	  
	  
	    bEnableMoveToS4:= NOT bMove1s04_2_s05 AND NOT bMove1s02_2_s03_1 AND NOT bMove1s03_1_s03_2;
 
		
		
		bEnableMove3_4 := fbS6.ConvStatus=0 OR fbS5.ConvStatus=0 AND NOT (bMove1s05_s06 OR bMove1s04_2_s05);
		fbDelayEnableMove3_4(IN:=bEnableMove3_4, PT:=T#0.3S);
		
fbS4 ( bAutomat:=bAutomat, bManual:=bManual,bStop:=bStop,bReset:=bReset, bEnableMove:=bEnableMoveToS4,bBuffering:=bBuffering,
        bDriveMove:=fbS5.bDrivePrev AND bSens1s05D2, bSens1:=bSens1s04D2, bSens2:=bSens1s04D1,ConvStatusPrev1:=fbS3.ConvStatus1,
        ConvStatusPrev2:=fbS3.ConvStatus2, bButtConv:= bButt1s04, bButtConvRev:=bButt1s04Rev, bButtMove:=bButt1s03_s04,
         bDirect:=bDirect	,bReverse:=bReverse,   ConvStatusNext1:= fbS5.ConvStatus,
		 bEnableMove3:=fbDelayEnableMove3_4.Q,  bEnableMove2:= TRUE, // bSensFreePrev1:=fbS3.bSensFree1, bSensFreePrev2:=fbS3.bSensFree2,
	    bMove1:=bMove1s03_2_s04_1, bMove2:=bMove1s03_s04, bMove3:=bMove1s04_1_s04_2, 
         bLongMove1=>bLongMove1s03_2_s04_1,bLongMove2=>bLongMove1s03_s04, bLongMove3=> bLongMove1s04_1_s04_2  );	  
	
  		
		bEnableRead := NOT bMove1s05_s06 AND NOT bMove1s03_2_s04_1 AND NOT bMove1s04_1_s04_2 AND NOT bMove1s03_s04 ;
		
fbLoadScan (bAutomat:=bAutomat,bEnable:=bEnableRead, iConvStatus:=fbS4.ConvStatus2, 
        sInID:=sScanID_1, stLoad:=stLoadS4_1, bReadScan:=bReadScan_1, 
        bRequestID=>bRequestID_1,bEnableReadyID=>bEnableReadyID, bOverflowID=>bOverflow_CTU_ID1,
		bSetVal:=bSetVal_ID1, bResetCTU:=bResetCTU_ID1, bCountNoRead=>bCountNoRead_ID1);		 
		
						
	    bEnableMoveToS5:= NOT bMove1s05_s06 AND NOT bMove1s03_2_s04_1 AND NOT bMove1s04_1_s04_2  AND bEnableReadyID;
	  
fbS5 ( bAutomat:=bAutomat, bManual:=bManual,bStop:=bStop,bReset:=bReset, bEnableMove:= bEnableMoveToS5,
        bDriveMove:=fbS6.bDrivePrev, bSens1:=bSens1s05D2, bSens2:=bSens1s05D1, bStopSecPlace:=TRUE,
        bButtConv:= bButt1s05,bButtConvRev:=bButt1s05Rev, ConvStatusPrev := fbS4.ConvStatus2,
		 bDirect:=bDirect	,bReverse:=bReverse,
		bSensFreePrev:= bSens1s04D1, bMove:=bMove1s04_2_s05,bLongMove=>bLongMove1s04_2_s05, );  
	  	
	
		bEnableWeight := NOT bMove1s04_2_s05 AND NOT bMove1s05_s06 ;
		
fbLoadWeight (bAutomat:=bAutomat,bEnable:=bEnableWeight,bMove:=bMove1s04_2_s05, iConvStatus:=fbS5.ConvStatus, stLoadIn:=stLoadS4_1,
        (*sInWeight:=sWeight_1*)rInWeight:= Massa_1_Gramms   ,  stLoad:=stLoadS5_1, stLoadMove:=stLoadS4_5_1, 
        (*bRequestWeight=>bRequestWeight_1,*) bEnableReadyData=>bEnableReadyData, bOverflowWeight=>bOverflow_CTU_Weight1,
		  bCountNoReadWeight=>bCountNoRead_Weight1, bSetValWeight:=bSetVal_Weight1, bResetCTUWeight:=bResetCTU_Weight1);	
		
			
	    bEnableMoveToS6:= NOT bMove1s04_2_s05   AND bEnableReadyData ;
	  
fbS6 ( bAutomat:=bAutomat, bManual:=bManual,bStop:=bStop,bReset:=bReset, bEnableMove:= bEnableMoveToS6,
        bSens1:=TRUE, bSens2:=bSens1s06D1, (*bSensFork:= bSens1s06D2, *)bButtConv:= bButt1s06, bButtConvRev:=bButt1s06Rev,
		 bDirect:=bDirect	,bReverse:=bReverse,bLastPlace:=TRUE,bLongMove=>bLongMove1s05_1s06,
	    bMove:=bMove1s05_s06,ConvStatusPrev := fbS5.ConvStatus,bSensFreePrev := bSensFreePrevS6);  
		
		bSensFreePrevS6 := fbS6.ConvStatus = 0;
		
		
fbLoadDataToWMS(bAutomat:=bAutomat,stLoadIn:=stLoadS5_1, bEnable:=NOT bMove1s05_s06, 
iConvStatus:=fbS6.ConvStatus, bMove	:=bMove1s05_s06, stLoadMove:=  stLoadS5_6_1, stLoad:=stLoadS6_1,
sMessageOut=>sMessageOut1, bMessageReady:=bMessageReady1	);		
		
		
	  
bDrive1s01M1    := fbS1.bDrive 		AND bDirect ;
bDrive1s01M1Rev := fbS1.bDriveRev 		AND bReverse AND bSens1s01D2;
bDrive1s02M1    := fbS2.bDrive 		AND bDirect ;
bDrive1s02M1Rev := fbS2.bDriveReverse 	AND bReverse;
bDrive1s03M1    := fbS3.bDrive 		AND bDirect ;
bDrive1s03M1Rev := fbS3.bDriveReverse 	AND bReverse;
bDrive1s04M1    := fbS4.bDrive 		AND bDirect ;
bDrive1s04M1Rev := fbS4.bDriveReverse 	AND bReverse;  
bDrive1s05M1    := fbS5.bDrive 		AND bDirect ;
bDrive1s05M1Rev := fbS5.bDriveRev 		AND bReverse;
bDrive1s06M1    := fbS6.bDrive 		AND bDirect AND bSens1s06D1;
bDrive1s06M1Rev := fbS6.bDriveRev 		AND bReverse;  
	  
]]></ST>
    </Implementation>
    <LineIds Name="ConvLine1">
      <LineId Id="159" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="111" Count="0" />
      <LineId Id="6" Count="4" />
      <LineId Id="113" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="582" Count="1" />
      <LineId Id="475" Count="0" />
      <LineId Id="587" Count="0" />
      <LineId Id="584" Count="2" />
      <LineId Id="571" Count="0" />
      <LineId Id="574" Count="0" />
      <LineId Id="664" Count="0" />
      <LineId Id="666" Count="1" />
      <LineId Id="671" Count="1" />
      <LineId Id="668" Count="0" />
      <LineId Id="478" Count="0" />
      <LineId Id="662" Count="1" />
      <LineId Id="661" Count="0" />
      <LineId Id="572" Count="0" />
      <LineId Id="655" Count="2" />
      <LineId Id="654" Count="0" />
      <LineId Id="573" Count="0" />
      <LineId Id="484" Count="0" />
      <LineId Id="502" Count="0" />
      <LineId Id="477" Count="0" />
      <LineId Id="568" Count="0" />
      <LineId Id="658" Count="1" />
      <LineId Id="569" Count="0" />
      <LineId Id="13" Count="2" />
      <LineId Id="365" Count="0" />
      <LineId Id="474" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="498" Count="0" />
      <LineId Id="17" Count="2" />
      <LineId Id="486" Count="0" />
      <LineId Id="489" Count="0" />
      <LineId Id="491" Count="0" />
      <LineId Id="488" Count="0" />
      <LineId Id="505" Count="0" />
      <LineId Id="20" Count="2" />
      <LineId Id="366" Count="0" />
      <LineId Id="485" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="499" Count="0" />
      <LineId Id="24" Count="2" />
      <LineId Id="493" Count="3" />
      <LineId Id="660" Count="0" />
      <LineId Id="27" Count="2" />
      <LineId Id="367" Count="0" />
      <LineId Id="492" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="422" Count="0" />
      <LineId Id="31" Count="1" />
      <LineId Id="34" Count="4" />
      <LineId Id="249" Count="0" />
      <LineId Id="39" Count="1" />
      <LineId Id="42" Count="4" />
      <LineId Id="368" Count="0" />
      <LineId Id="199" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="250" Count="0" />
      <LineId Id="49" Count="4" />
      <LineId Id="248" Count="0" />
      <LineId Id="54" Count="1" />
      <LineId Id="57" Count="3" />
      <LineId Id="369" Count="0" />
      <LineId Id="61" Count="1" />
      <LineId Id="155" Count="0" />
      <LineId Id="298" Count="1" />
      <LineId Id="307" Count="0" />
      <LineId Id="311" Count="0" />
      <LineId Id="313" Count="0" />
      <LineId Id="301" Count="1" />
      <LineId Id="63" Count="13" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>